# bevy-game

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
assets/: README.md
docs/: book.toml
src/: lib.rs  main.rs
src/common/: README.md  layers.rs  mod.rs  state.rs  test_utils.rs  tunables.rs
src/game/: mod.rs
src/plugins/: mod.rs
src/plugins/camera/: README.md  mod.rs
src/plugins/core/: mod.rs  tests.rs
src/plugins/enemies/: README.md  mod.rs  tests.rs
src/plugins/lighting/: mod.rs
src/plugins/physics/: mod.rs
src/plugins/player/: README.md  mod.rs  tests.rs
src/plugins/projectiles/: README.md  allocator.rs  collision.rs  commit.rs  components.rs  layers.rs  messages.rs  mod.rs  pool.rs  request.rs  tests.rs
src/plugins/projectiles/bullets/: components.rs  mod.rs  systems.rs  tests.rs
src/plugins/sfx/: README.md
src/plugins/ui/: README.md  debug_hud.rs  mod.rs
src/plugins/world/: mod.rs  tests.rs
tests/: README.md  bullet_hit_flow.rs  interpolation_calc.rs  smoke.rs
tests/common/: mod.rs
