[package]
name = "bevy-game"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = { version = "0.5.0", features = ["simd"] }
bevy = { version = "0.18.0", default-features = false, features = ["2d", "debug", "pan_camera"] }
bevy_firefly = "0.18.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3